apps/actual-budget/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 128m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - budget.sanvicr.com
      secretName: budget-tls
  rules:
    - host: budget.sanvicr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actual-budget
                port:
                  name: http
